--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
    "type": "module",
    "scripts": {
       "build": "tsc",
-      "start": "node --experimental-specifier-resolution=node dist/index.js",
+      "start": "node dist/index.js",
       "dev": "node --loader ts-node/esm src/index.ts"
    },
    "name": "puppeteer",
