--- a/package.json
+++ b/package.json
@@ -1,25 +1,18 @@
 {
-   "main": "dist/index.js",
-   "type": "module",
-   "scripts": {
-      "build": "tsc",
-      "start": "node dist/index.js",
-      "dev": "node --loader ts-node/esm src/index.ts"
-   },
-   "name": "puppeteer",
+   "name": "puppeteer-ts",
    "version": "1.0.0",
-   "keywords": [],
-   "author": "",
-   "license": "ISC",
-   "description": "",
+   "main": "dist/index.js",
+   "scripts": {
+     "build": "tsc",
+     "start": "node dist/index.js"
+   },
    "dependencies": {
-      "puppeteer": "^24.12.0"
+     "express": "^4.18.2",
+     "puppeteer": "^24.1.1"
    },
    "devDependencies": {
-      "@types/node": "^24.0.12",
-      "@types/puppeteer": "^5.4.7",
-      "nodemon": "^3.1.10",
-      "ts-node": "^10.9.2",
-      "typescript": "^5.8.3"
+     "@types/express": "^4.17.17",
+     "@types/node": "^20.0.0",
+     "typescript": "^5.0.0"
    }
-}
+ }
