--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,12 @@
 {
    "compilerOptions": {
-      "target": "ES2022",
-      "module": "NodeNext",
-      "moduleResolution": "NodeNext",
-      "outDir": "./dist",
-      "rootDir": "./src",
-      "esModuleInterop": true,
-      "strict": true,
-      "skipLibCheck": true,
-      "forceConsistentCasingInFileNames": true
+     "target": "ES2020",
+     "module": "commonjs",
+     "outDir": "./dist",
+     "rootDir": "./src",
+     "strict": true,
+     "esModuleInterop": true,
+     "skipLibCheck": true
    },
-   "include": [
-      "src/**/*"
-   ],
-   "exclude": [
-      "node_modules",
-      "**/*.spec.ts"
-   ]
-}
+   "include": ["src/**/*"]
+ }
